# TimeDisk

./: .env.example  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
binaries/v0.1.1/: build_info.txt  flasher_args.json
binaries/v0.1.2/: build_info.txt
binaries/v0.1.3/: build_info.txt  flasher_args.json
cmake/: firmware_version.cmake
components/app_config/: CMakeLists.txt
components/app_config/include/: app_config.h  app_nvs.h
components/app_config/src/: app_config.c  app_nvs.c
components/ui_assets/: CMakeLists.txt
components/ui_assets/assets/: README.md
components/ui_assets/assets/btn_start_rest/: btn_start_rest.af~lock~  embed.txt
components/ui_assets/assets/btn_start_timer/: btn_start_timer.af  embed.txt
components/ui_assets/assets/btn_start_wake/: btn_start_wake.af  embed.txt
components/ui_assets/assets/icon_wedge_cancel/: embed.txt
components/ui_assets/assets/tod_rest/: embed.txt
components/ui_assets/assets/tod_sleep/: embed.txt
components/ui_assets/assets/tod_wake/: embed.txt
components/ui_assets/assets/tod_winddown/: embed.txt
components/ui_assets/assets/wedge_shape_left/: wedge_shape_left.af~lock~
components/ui_assets/assets/wedge_shape_right/: embed.txt
components/ui_assets/assets/wedge_shape_wide/: embed.txt  wedge_shape_wide.af  wedge_shape_wide.af~lock~
components/ui_assets/include/: ui_assets.h
components/ui_assets/src/: btn_start_rest.c  btn_start_timer.c  btn_start_wake.c  icon_wedge_cancel.c  icon_wedge_confirm.c  icon_wedge_menu_wide.c  icon_wedge_next.c  icon_wedge_settings.c  wedge_cancel.c  wedge_confirm.c  wedge_settings.c  wedge_shape_left.c  wedge_shape_right.c  wedge_shape_wide.c
components/ui_screens/: CMakeLists.txt
components/ui_screens/include/: ui_screen_settings_internal.h
components/ui_screens/src/: ui_screen_aa.c  ui_screen_loading.c  ui_screen_menu.c  ui_screen_schedule.c  ui_screen_settings.c  ui_screen_splash.c  ui_screen_startup_theme_wizard.c  ui_screen_startup_timezone_wizard.c  ui_screen_startup_wifi_wizard.c  ui_screen_timer.c  ui_screen_tod.c  ui_screens_registry.c  ui_settings_adult_auth.c  ui_settings_colours.c  ui_settings_network.c  ui_settings_schedule.c  ui_settings_timeouts.c  ui_settings_timezone.c  ui_settings_update.c
docs/: adult_authentication.md  data_flow.md  data_model.md  mode_flow.md  mqtt_protocol.md  screen_flow.md  screen_flow_simple.md  timezone_catalog.md
firmware/esp32-p4/components/ui_assets/: CMakeLists.txt
firmware/esp32-p4/components/ui_assets/assets/: README.md
firmware/esp32-p4/components/ui_assets/assets/btn_start_rest/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/btn_start_sleep/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/btn_start_timer/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/btn_start_wake/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/icon_wedge_confirm/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/icon_wedge_menu_wide/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/icon_wedge_next/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/icon_wedge_settings/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/splash/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/tod_rest/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/tod_sleep/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/tod_wake/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/tod_winddown/: embed.txt
firmware/esp32-p4/components/ui_assets/assets/wedge_shape_left/: embed.txt  wedge_shape_left.af
firmware/esp32-p4/components/ui_assets/assets/wedge_shape_wide/: wedge_shape_wide.af
firmware/esp32-p4/components/ui_assets/include/: ui_assets.h
firmware/esp32-p4/components/ui_assets/src/: btn_start_sleep.c  icon_wedge_cancel.c  icon_wedge_confirm.c  icon_wedge_settings.c  ui_assets_spiffs.c  wedge_shape_wide.c
main/: CMakeLists.txt  app_config.cpp  app_config.h  app_main.c  idf_component.yml  main.cpp  ui_common.cpp  ui_common.h  ui_keyboard.cpp  ui_keyboard.h  ui_nav.cpp  ui_nav.h  ui_screen_aa.cpp  ui_screen_loading.cpp  ui_screen_menu.cpp  ui_screen_schedule.cpp  ui_screen_settings.cpp  ui_screen_splash.cpp  ui_screen_startup_wifi_wizard.cpp  ui_screen_timer.cpp  ui_screen_tod.cpp  ui_screen_wizard.cpp  ui_screens.cpp  ui_screens.h  ui_screens_registry.cpp  ui_screens_registry.h  ui_theme.cpp  ui_theme.h
scripts/: build_firmware.sh  deploy_timedisk_to_ha.env.example  deploy_timedisk_to_ha.sh  embed_ui_assets.sh  flip_image.sh  lib_firmware_version.sh  upload_firmware.sh
ui_assets/: wedge_shape_left.af  wedge_shape_left.af~lock~
(+134 files in other folders)
